Added <label> tags.

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ $(function() {
 </head>
 <body>
 <div>
-<div> Number of colors: <input type="number" id="numCol" min="0" step="1" value="4"/></div>
-<div> Number of pegs: <input type="number" id="numPeg" min="0" step="1" value="4"/></div>
+<div><label for="numCol">Number of colors:</label> <input type="number" id="numCol" min="0" step="1" value="4"/></div>
+<div><label for="numPeg">Number of pegs:</label> <input type="number" id="numPeg" min="0" step="1" value="4"/></div>
  <button id="restart">(Re)Start</button>
 </div>
 
