Declared i as a local variable

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ $(function() {
 		var $colNames=$('#colNames').val();
 		var colorNames=[];
 		var retVal = [];
+		var i;
 		if($colNames.length>1){
 			colorNames=$colNames.split(",");
 		}
