--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ input.number{
 	width: 3em;
 }
 </style>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script type="text/javascript">
 $(function() {
 	var DATA_KEY = 'nebu-mastermind-solver';
