--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ input.number{
 	width: 3em;
 }
 </style>
-<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.6.4/jquery.min.js" integrity="sha256-lR1rrjnrFy9XqIvWhvepIc8GD9IfWWSPDSC2qPmPxaU=" crossorigin="anonymous"></script>
 <script type="text/javascript">
 $(function() {
 	var DATA_KEY = 'nebu-mastermind-solver';
