Disabled unit tests.

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 					
 					//generic tests
 					guessContradictsSomeEvidenceTestCase(["R", "G", "B", "Y"], [{guess: ["B", "G", "C", "C"], bothCorrect: 1, colorCorrect: 1}], false);
-				})(); //Uncomment to run unit tests.
+				})//(); //Uncomment to run unit tests.
 			});
 		</script>
 	</body>
